# jb_test_task_kge

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
src/: __init__.py  custom_transe.py  embeddings_data_module.py  transe_module.py
