[tool.poetry]
name = "jb-test-task-kge"
version = "0.0.1"
description = ""
authors = ["Maksim Bondarev"]
readme = "README.md"
packages = [{include = "jb_test_task_kge"}]

[tool.poetry.dependencies]
python = "3.9.16"
torch = "2.0.0"
torch-geometric = "2.3.0"
pytorch-lightning = "1.9.0"
tqdm = "^4.65.0"
wandb = "^0.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
